add taskda o'zgariah runnerda defoult userlar defoult task.png yana bir qancha o'zgarish